fix of the links in the dashboard baing invisible

--- a/src/style.css
+++ b/src/style.css
@@ -171,7 +171,7 @@ tr:nth-child(even) {
   background-color: #cbcbcb;
 }
 
-.view-link[href="#show"] {
+.view-link[id="navShow"] {
   display: none;
 }
 
